CMS7-3677 CSS fix for IE: vertical alignment of cursor in input windows

--- a/cms/skin/src/main/webapp/screen_ie.css
+++ b/cms/skin/src/main/webapp/screen_ie.css
@@ -28,3 +28,5 @@ table.toolbarRow {
 .hippo-search-scope-container-ul li {
   width: 42%;
 }
+ 
+.hippo-window-form td input { padding-top: 0; }
